--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "tracker",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint --ignore-path .gitignore '**/*.{js,jsx,ts,tsx}' --fix",
+    "prettier": "prettier --ignore-path .gitignore --write '**/*.{js,jsx,ts,tsx}'",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.6.0",
@@ -19,21 +22,34 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.13.1",
-    "zod": "^3.21.4"
+    "zod": "^3.22.3"
   },
   "devDependencies": {
     "@types/eslint": "^8.44.2",
-    "@types/node": "^18.16.0",
+    "@types/node": "^20.8.2",
     "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
+    "@types/react-dom": "^18.2.9",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
-    "eslint": "^8.47.0",
-    "eslint-config-next": "^13.4.19",
+    "eslint": "^8.39.0",
+    "eslint-config-next": "13.5.4",
+    "eslint-plugin-css-modules": "^2.11.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.0.3",
     "typescript": "^5.1.6"
   },
-  "ct3aMetadata": {
-    "initVersion": "7.20.2"
-  },
-  "packageManager": "npm@9.5.0"
+  "lint-staged": {
+    "src/**/*.{js,ts?(x)}": [
+      "eslint --fix"
+    ],
+    "src/**/*.{js,ts,tsx}": [
+      "prettier --write"
+    ]
+  }
 }
