--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tracker",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "build": "next build",
@@ -30,6 +31,7 @@
     "@typescript-eslint/parser": "^6.3.0",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.4.19",
+    "sass": "^1.68.0",
     "typescript": "^5.1.6"
   },
   "ct3aMetadata": {
