--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
     "prisma": "^5.4.0",
+    "sass": "^1.68.0",
     "typescript": "^5.1.6"
   },
   "lint-staged": {
