--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,42 @@
-node_modules
-npm-debug.log
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# database
+/prisma/db.sqlite
+/prisma/db.sqlite-journal
+
+# next.js
+/.next/
+/out/
+next-env.d.ts
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.npmrc
-.DS_Store
-*.swp
-/.nyc_output/
-/coverage/
-/.idea/*
-!/.idea/runConfigurations
-!/.idea/maven_settings.xml
-/automated-tests/.idea/*
-/automated-tests/target/*
-nbproject
-.vscode
-/.next/
-dist
-build/
-public/static
-webpack-assets.json
-webpack-stats.json
-vocabularyEntryIds.json
-vocabularyEntryMapping.json
-.history
-*.iml
-*.tar.bz2
-.vs
-
-secrets.json
-tenants.json
-!/src/__mocks__/**
+.pnpm-debug.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# do not commit any .env files to git, except for the .env.example file. https://create.t3.gg/en/usage/env-variables#using-environment-variables
+.env
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
