--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "bcrypt": "^5.1.1",
     "classnames": "^2.3.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "^13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -30,7 +32,9 @@
     "zod": "^3.22.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
     "@types/eslint": "^8.44.2",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.9",
