--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@trpc/server": "^10.37.1",
     "bcrypt": "^5.1.1",
     "classnames": "^2.3.2",
+    "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
     "next": "^13.4.19",
     "react": "18.2.0",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
+    "@types/cors": "^2.8.16",
     "@types/eslint": "^8.44.2",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.2",
