--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@trpc/server": "^10.37.1",
     "bcrypt": "^5.1.1",
     "classnames": "^2.3.2",
+    "date-fns": "^3.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "^13.4.19",
     "react": "18.2.0",
